# ChangeLog for x11-libs/libXft
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXft/ChangeLog,v 1.33 2006/12/09 17:03:41 joshuabaergen Exp $

*libXft-2.1.12 (09 Dec 2006)

  09 Dec 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  +libXft-2.1.12.ebuild:
  Version bump.  Restores the XftNameUnparse symbol which went missing in the
  last version.  Fixes bug #152564.

*libXft-2.1.11 (21 Oct 2006)

  21 Oct 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  +libXft-2.1.11.ebuild:
  Version bump.

  19 Jul 2006; Guy Martin <gmsoft@gentoo.org> libXft-2.1.10.ebuild:
  Stable on hppa.

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> libXft-2.1.10.ebuild:
  Mark 2.1.10 stable on ia64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>; libXft-2.1.10.ebuild:
  ppc/sparc/mips/alpha/arm/sh stable

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  -libXft-2.1.8.2.ebuild:
  Pull old versions.

  30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> libXft-2.1.10.ebuild:
  Stable on amd64.

  30 Jun 2006; Markus Rothe <corsair@gentoo.org> libXft-2.1.10.ebuild:
  Stable on ppc64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>; libXft-2.1.10.ebuild:
  x86 stable.

*libXft-2.1.10 (06 Jun 2006)

  06 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>; -libXft-2.1.9.ebuild,
  +libXft-2.1.10.ebuild:
  (#135787) Also export XftNameUnparse.

*libXft-2.1.9 (03 Jun 2006)

  03 Jun 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  +libXft-2.1.9.ebuild:
  Version bump.  Fixes unnecessarily exported symbols.

  28 Apr 2006; Donnie Berkholz <spyderous@gentoo.org>;
  libXft-2.1.8.2.ebuild:
  We don't need PROVIDE anymore with new-style virtuals.

  28 Apr 2006; Marien Zwart <marienz@gentoo.org>
  files/digest-libXft-2.1.8.2, Manifest:
  Revert to working digest.

  28 Apr 2006; Alec Warner <antarus@gentoo.org> files/digest-libXft-2.1.8.2,
  Manifest:
  Fixing SHA256 digest, pass four
