@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST libXft-2.1.10.tar.bz2 252786 RMD160 41fa35fff3ff5c8e9d9402c73b2b9971283acbc3 SHA1 a5d661544c5605c44d22ccd76383344dee03254b SHA256 14144bfcbdf2514fcf439c3290c094197ebb80ea2c44aa4ca7aa08f1c9849774
 DIST libXft-2.1.11.tar.bz2 269900 RMD160 731c55abe5a96449ff794882332e67ceb35b8bb5 SHA1 74d06ca641f5c5f07af881380aef1601d170d85e SHA256 de2907caa0e348bca7bacd14f9d2b2ce6e0a3ffb78f218d36171fadc7d796f25
 DIST libXft-2.1.12.tar.bz2 260437 RMD160 98ee482a0bdb9d41bbea667ea84d00421e51424b SHA1 c55fb1b79e6e8459a343e4986f0607a438eff340 SHA256 68b46f85caaf0b30c876bd983abe144c25755bee7532e8738ab7ebe29a428986
@@ -9,14 +12,14 @@ EBUILD libXft-2.1.11.ebuild 788 RMD160 443a0d6b1c46a7610f67ce081dccba8d852865c0 
 MD5 1e5eb47f861c4b29d659f4bad4796740 libXft-2.1.11.ebuild 788
 RMD160 443a0d6b1c46a7610f67ce081dccba8d852865c0 libXft-2.1.11.ebuild 788
 SHA256 96b44fd2e815414e6a58d8461e5a3b2a3118f9cb74b475f7d4894866532c83c3 libXft-2.1.11.ebuild 788
-EBUILD libXft-2.1.12.ebuild 788 RMD160 7f64a6773960a65423104b6a7fa2fe5566c532f4 SHA1 eecac704fb02c59d99961b3b5cb61d009eea5254 SHA256 ae9a0d1c8a5060d4feb9304090131c2848ef25f506dfab6cc5c82a94d180cc56
-MD5 62d69ffb9bb31cd0e14defb600cba787 libXft-2.1.12.ebuild 788
-RMD160 7f64a6773960a65423104b6a7fa2fe5566c532f4 libXft-2.1.12.ebuild 788
-SHA256 ae9a0d1c8a5060d4feb9304090131c2848ef25f506dfab6cc5c82a94d180cc56 libXft-2.1.12.ebuild 788
-MISC ChangeLog 4113 RMD160 ed36eadd3f7e065246b3692dac3a62f9ded6b2b7 SHA1 acc7912747c6fbf91180096b78776599e5c34fe4 SHA256 c9a45098d9617b7601d0fe3b6ac27d5ad33e4c5e249dbdd296bec38a33697371
-MD5 cb483e23b7d18981d5ec5aeae6ca4020 ChangeLog 4113
-RMD160 ed36eadd3f7e065246b3692dac3a62f9ded6b2b7 ChangeLog 4113
-SHA256 c9a45098d9617b7601d0fe3b6ac27d5ad33e4c5e249dbdd296bec38a33697371 ChangeLog 4113
+EBUILD libXft-2.1.12.ebuild 779 RMD160 3e03eacc6e3f84b1cb704fa927dc83475dd12f93 SHA1 18c703534a36c3c78335620d65c28e88fe8db941 SHA256 35c3fcecbdd8702bce77ecabf8eae72c7e4d1b39406a26a51a5025256ee9e4b0
+MD5 b040a713115d1f44c2f20413e225fc2e libXft-2.1.12.ebuild 779
+RMD160 3e03eacc6e3f84b1cb704fa927dc83475dd12f93 libXft-2.1.12.ebuild 779
+SHA256 35c3fcecbdd8702bce77ecabf8eae72c7e4d1b39406a26a51a5025256ee9e4b0 libXft-2.1.12.ebuild 779
+MISC ChangeLog 4208 RMD160 be7bad0aa998a01fab2b23ae166890222ad22796 SHA1 f4af2cfaeab0c2e516be58ceee3afdacb896683c SHA256 b5fc11bea9301ad1cc0e3863f8b708f572b6f96b52b71f3912ec4fc66e957f47
+MD5 accc3e53df98127666817d0abe963cf6 ChangeLog 4208
+RMD160 be7bad0aa998a01fab2b23ae166890222ad22796 ChangeLog 4208
+SHA256 b5fc11bea9301ad1cc0e3863f8b708f572b6f96b52b71f3912ec4fc66e957f47 ChangeLog 4208
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
 MD5 a37bab73e2f24b213932c30997d3d360 metadata.xml 156
 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 metadata.xml 156
@@ -30,3 +33,10 @@ SHA256 138c9839ac32b1ddfab7c6e8e57199842f48c5d8d7ca4bcd913c8ea7719fc325 files/di
 MD5 38649e9c433d84263456f8928fb2694f files/digest-libXft-2.1.12 244
 RMD160 b24baa87ab8ea6a50c3459fa772fdcc91e64aedf files/digest-libXft-2.1.12 244
 SHA256 df7e319e4f96268c41316a1a09371a7ed844b573d14ae1a4c4720319d18b0271 files/digest-libXft-2.1.12 244
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.6 (GNU/Linux)
+
+iD8DBQFF+HNsNQqtfCuFneMRAh7DAJ0cxXhjGVV2II2WZFNC8EmnTlzrDACfa0Gb
+d/g1y5yql6pUuKg+VLMO0dY=
+=/06v
+-----END PGP SIGNATURE-----
