@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/libXft
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXft/ChangeLog,v 1.33 2006/12/09 17:03:41 joshuabaergen Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXft/ChangeLog,v 1.34 2007/03/14 22:14:02 opfer Exp $
+
+  14 Mar 2007; Christian Faulhammer <opfer@gentoo.org> libXft-2.1.12.ebuild:
+  stable x86, bug 170813
 
 *libXft-2.1.12 (09 Dec 2006)
 
